--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
  		</div>
     </nav>
     <h1>Wombat Coffee Roasters</h1>
+	 <div><img src="images/allowsese.jpg"></div>
  </main>
 
  <aside class="col-sidebar">
