--- a/index.html
+++ b/index.html
@@ -1,80 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-	</title>
-	<link href="styles7.css" rel="stylesheet"  type="text/css" />
+	<title>DailyLife</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<header class="top-banner">
-  <div class="top-banner-inner">
-    <p>Find out what's going on at Wombat Coffee each
-    month. Sign up for our newsletter:
-      <button id="open">Sign up</button>
-    </p>
- </div>
+
+<header class="gesture">
+	<h1>Welcome To My Site</h1>
 </header>
-<div class="modal" id="modal">
-  <div class="modal-backdrop"></div>
-  <div class="modal-body">
-    <button class="modal-close" id="close">close</button>
-    <h2>Wombat Newsletter</h2>
-    <p>Sign up for our monthly newsletter. No spam.
-    We promise!</p>
-    <form>
-      <p>
-        <label for="email">Email address:</label>
-        <input type="text" name="email"/>
-      </p>
-      <p><button type="submit">Submit</button></p>
-    </form>
-   </div>
-</div>
+
+<nav class="menu">
+	<button id="open" class="open">hamtag</button>
+
+    <div class="modal" id="modal">
+    	<div class="modal-backdrop"></div>
+		<div class="modal-body">
+			<ul class="menu-content">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Memes</a></li>
+				<li><a href="#">Knowledge</a></li>
+				<li><a href="#">Shares</a></li>
+			</ul>
+			<button id="close" class="close">close</button>
+		</div>
+    </div>
+</nav>
+
+<nav class="top-nav">
+	<ul class="horizon">
+		<li><a href="#">FORMER</a></li>
+		<li><a href="#">LATEST</a></li>
+		<li><a href="#">FAVORITE</a></li>
+	</ul>
+</nav>
+
+<main class="">
+	<section class="latest-article">
+		<img src="">
+		<h2>Title</h2>
+		<div class="intro">introduce</div>
+	</section>
+	<section class="former-article">
+		
+	</section>
+</main>
+
 <script type="text/javascript">
- var button = document.getElementById('open');
- var close = document.getElementById('close');
- var modal = document.getElementById('modal');
- button.addEventListener('click', function (event) {
- event.preventDefault();
- modal.style.display = 'block';
- });
- close.addEventListener('click', function (event) {
- event.preventDefault();
- modal.style.display = 'none';
- });
+	var button = document.getElementById('open');
+	var close = document.getElementById('close');
+	var modal = document.getElementById('modal');
+
+	button.addEventListener('click', function (event) {
+	 event.preventDefault();
+	 modal.style.display = 'block';
+	});
+
+	close.addEventListener('click', function (event) {
+	 event.preventDefault();
+	 modal.style.display = 'none';
+	});
 </script>
 
-<div class="container">
- <main class="col-main">
- 	<nav>
- 		<div class="dropdown">
- 			<div class="dropdown-label">Main Menu</div>
-			<div class="dropdown-menu">
- 				<ul class="submenu">
- 					<li><a href="/">Home</a></li>
- 					<li><a href="/coffees">Coffees</a></li>
- 					<li><a href="/brewers">Brewers</a></li>
- 					<li><a href="/specials">Specials</a></li>
- 					<li><a href="/about">About us</a></li>
- 				</ul>
- 			</div>
- 		</div>
-    </nav>
-    <h1>Wombat Coffee Roasters</h1>
-	 <div><img src="images/allowsese.jpg"></div>
- </main>
-
- <aside class="col-sidebar">
-   <div class="affix">
- 	<ul class="submenu">
- 		<li><a href="/">Home</a></li>
- 		<li><a href="/coffees">Coffees</a></li>
- 		<li><a href="/brewers">Brewers</a></li>
- 		<li><a href="/specials">Specials</a></li>
- 		<li><a href="/about">About us</a></li>
- 	</ul>
-   </div>
- </aside>
-</div>
 </body>
 </html>
