--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>DailyLife</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<meta charset="UTF-8">
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1">
 </head>
 <body>
 
