--- a/index.html
+++ b/index.html
@@ -38,15 +38,22 @@
 	</ul>
 </nav>
 
-<main class="">
+<main>
 	<section class="latest-article">
-		<img src="">
-		<h2>Title</h2>
-		<div class="intro">introduce</div>
+		<figure>
+			<div class="time">2021/10/3</div>
+			<img src="10.3/10.3 start.jpg">
+			<h2>Title</h2>
+			<div class="intro">introduce</div>			
+		</figure>
 	</section>
-	<section class="former-article">
+
+	<div class="article-grid">
+		<section class="former-article">
+
 		
-	</section>
+		</section>
+	</div>
 </main>
 
 <script type="text/javascript">
